--- a/index.html
+++ b/index.html
@@ -2,24 +2,25 @@
 <html lang="pt-br">
 <head>
 	<meta charset="UTF8">
-	<title>The Vultures</tile>
+	<title>The Vultures</title>
+	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="flexbox.css">
 </head>
 <body>
-	<header>
+	<header class="containerCabecalho">
 		<h1>
-			<img src="">
+			<img class="banner" src="theVulturesVermelho.png">
 		</h1>
+	</header>	
 	<main>
 		<ul>
 			<li>
-				<h2></h2>
-				<img src="">
+				<h2>Sobre a banda</h2>
 				<p></p>
 			</li>
 			<li>
-				<h2></h2>
+				<h2>Sobre os shows</h2>
 				<img src="">
 				<p></p>
 			</li>
