--- a/index.html
+++ b/index.html
@@ -13,31 +13,27 @@
 			<img class="banner" src="theVulturesVermelho.png">
 		</h1>
 	</header>	
-	<main>
-		<ul>
+	<main class="containerConteudoPrincipal">
+		<ul class="listaConteudoDivulgacao">
 			<li>
 				<h2>Sobre a banda</h2>
-				<p></p>
+				<p class="textoSobreBanda">Banda independente de Rock n' Roll, voltado ao publico grunge.</p>
+				<p class="narracaoSobreBanda">Em 2008, a The vultures começa a ganhar forma, as asas do nosso abutre crescia e ganhava forças.</p>
+				<p class="narracaoSobreBanda">Seus integrantes em 2008 ainda eram adolecentes, todos da mesma região, com um único e compartilhado sonho, o qual já começava a ser realidade</p>
+				<p class="narracaoSobreBanda">Alguns anos depois nosso abutre perdeu um de seus integrantes, o tempo passou as difículdades surgiram, agora mais velhos tinhamos obrigações de pessoas mais velhas e começamos a nos afastar por motivos de responsabilidades maoires, nosso abutre então no ano de 2013 entra em uma hibernação.</p>
+				<p class="narracaoSobreBanda">Em 2016, nosso abutre dava sinais de quem queria acordar, então seus integrantes se reuniram para ajudar ele levantar.</p>
+				<p class="narracaoSobreBanda">Ele estava sedento por rock, o simples fato de tocar já não conseguia satisfazer sua existência, ele queria mais.</p>
+				<p class="narracaoSobreBanda">Então após um tempo de recuperação nosso abutre voltou a voar e a consquistar o céu, passando por diversos bares e palcos, ele agora estava com a galera e todos os amantes do bom e velho Rock n' Roll, aonde era seu lugar, aonde ele fazia a todos eletrizar e agitar com seu som</p>
+				<p class="textoSobreBanda">A the vultures inicia sua jornada de shows logo após sua primeira reestrutaração em 2016</p>
 			</li>
 			<li>
 				<h2>Sobre os shows</h2>
-				<img src="">
-				<p></p>
-			</li>
-			<li>
-				<h2></h2>
-				<img src="">
-				<p></p>
-			</li>
-			<li>
-				<h2></h2>
-				<img src="">
-				<p></p>
-			</li>
-			<li>
-				<h2></h2>
-				<img src="">
-				<p></p>
+				<p class="sobreShow">Fazemos shows em todo território do sul do Brasil</p>
+				<p class="sobreShow">Podendo ser compratilhado com outras Bandas ou somente nosso</p>
+				<p class="sobreShow">Tendo duração e quantidade de músicas váriados de acordo com pacote de shows escolhido pelo contratante</p>
+				<p class="sobreShow">Não fornecemos estrutura de som para shows de grande porte</p>
+				<p class="sobreShow">Somente instrumentos, caixas e amplificadores particular de cada músico.</p>
+				<p class="sobreShow">Podendo ser ultilizado em bares, e shows menores</p>
 			</li>
 		</ul>
 	</main>
